@@ -30,7 +30,7 @@
   { "name": "Honor of Kings", "playstore_id": "com.levelinfinite.sgameGlobal", "user_id": "11641241486504197650", "description": "What I don't like about this game is the battle rating result is unfair, I like the battle rating result in ML because it based on KDA." },
   { "name": "Call of Duty Warzone", "user_id": "Jaydesu#7620387", "icon": "https://play-lh.googleusercontent.com/V5IdturO3h5SiWU6WhyegnUy1rhbwmAI95BO6XbT_9t9I-CCgpqRV-hK4ynPa1tsgg" },
   { "playstore_id": "com.kurogame.wutheringwaves.global", "user_id": "901728977", "category": "Gacha" },
-  { "name": "Zenless Zone Zero", "playstore_id": "com.HoYoverse.Nap","user_id": "1300474244",
+  { "name": "Zenless Zone Zero", "playstore_id": "com.HoYoverse.Nap","user_id": "1300474244", "description": "The best storytelling on Hoyoshills game so far!",
       "category": "Gacha", "my_gm_rec_img": "/My_Info/Game_Info/My-ZZZ-Info.png",
       "my_gm_rec_link": "https://act.hoyolab.com/app/zzz-game-record/index.html?hyl_presentation_style=fullscreen&bbs_auth_required=true&game_id=8&user_id=71410534&lang=en-us&bbs_theme=dark&bbs_theme_device=1&utm_source=share&utm_medium=link&utm_campaign=web#/zzz"  },
   { "name": "Fate/Grand Order", "user_id": "953213672", "icon": "https://play-lh.googleusercontent.com/WRixOqWRZQHfCgFhqfWbjCh6myA4hO4bOPQ_KJJEKrB_G8KZvl0IvNEUmRuxnfx8Tbw", "description": "I accidentally delete this game and didn't save this transfer number so GG!", "category": "Gacha" },
@@ -87,7 +87,7 @@
   { "name": "Fate Trigger", "user_id": "302024821", "icon": "https://assets-prd.ignimgs.com/2024/09/13/fate-trigger-the-novita-button-1726237557428.jpg?width=300&crop=1%3A1%2Csmart&auto=webp" },
   { "name": "Mecha BREAK", "user_id": "7267805958", "icon": "https://images.dwncdn.net/images/t_app-icon-l/p/2089ee34-ca3e-49c9-8122-6ea2867f191c/2245222234/mecha-break-logo" },
   { "name": "Clair Obscur: Expedition 33", "user_id": "...", "icon": "https://cdn2.steamgriddb.com/grid/d762ffaf700de0c67b2c1af312b53af6.png", "category": "Steam Family" },
-  { "name": "Hyperdimension Neptunia Re;Birth1", "user_id": "...", "icon": "https://avatarfiles.alphacoders.com/590/59030.jpg", "category": "Steam Family" },
+  { "name": "Hyperdimension Neptunia Re;Birth1", "user_id": "...", "icon": "https://pbs.twimg.com/media/CXWsuIWWwAI4wE3.png", "category": "Steam Family" },
   { "name": "The NOexistenceN of you AND me", "user_id": "...", "icon": "https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2873080/82cb5ecf945ecbf96e9509269f19ce3533e0ee93.jpg", "category": "Steam Family" },
   { "name": "REPO", "user_id": "...", "icon": "https://external-preview.redd.it/round-repo-icon-v0-kCGB1sQQkYu42w-2ghQap2d8vU5W1cE9I9fYOzRCw-4.png?auto=webp&s=14e7bc42a8444a10815aa0398e8f334ed78aa8ae", "category": "Steam Family" },
   { "name": "Little Witch Nobeta", "user_id": "...", "icon": "https://www.littlewitchnobeta.com/assets/common/images/character/icon_01_hover.png", "category": "Steam Family" },
