@@ -205,7 +205,7 @@
       "name": "Zenless Zone Zero",
       "user_id": "1300474244",
       "category": "Gacha",
-      "description": "No description provided",
+      "description": "The best storytelling on Hoyoshills game so far!",
       "icon": "https://play-lh.googleusercontent.com/8jEmEvTsNIRW1vLlrDXXCcDlKkQrNb8NzccOXrln4G_DOUZpcBPbN9ssjuwBWz7_yZQ",
       "my_gm_rec_img": "/My_Info/Game_Info/My-ZZZ-Info.png",
       "my_gm_rec_link": "https://act.hoyolab.com/app/zzz-game-record/index.html?hyl_presentation_style=fullscreen&bbs_auth_required=true&game_id=8&user_id=71410534&lang=en-us&bbs_theme=dark&bbs_theme_device=1&utm_source=share&utm_medium=link&utm_campaign=web#/zzz"
@@ -495,12 +495,11 @@
       "icon": "https://play-lh.googleusercontent.com/yALXNDwBTVSgYDv4SzKNAc0VB0JVKCxSpkQi7wetdzGhk597aasrnAuN9YNNu3Skns94"
     },
     {
-      "name": "Unknown",
+      "name": "Brawl Stars",
       "user_id": "On play store but I should DL this game first",
       "category": "",
       "description": "No description provided",
-      "icon": "https://via.placeholder.com/100x100?text=Error",
-      "error": "Remote end closed connection without response"
+      "icon": "https://play-lh.googleusercontent.com/tYB_jWhdJuauLSPJ7LVj_5dUq6g_eQwj2wPNG9jFN78zKbDqMNfnEU2fUGiDQtYAy0yHn4SMnaF0lhanJpm0"
     },
     {
       "name": "Brawlhalla",
@@ -605,7 +604,7 @@
       "user_id": "...",
       "category": "Steam Family",
       "description": "No description provided",
-      "icon": "https://avatarfiles.alphacoders.com/590/59030.jpg"
+      "icon": "https://pbs.twimg.com/media/CXWsuIWWwAI4wE3.png"
     },
     {
       "name": "The NOexistenceN of you AND me",
