@@ -1,7 +1,7 @@
 {
-  "fetched_at": "2026-01-10T12:03:42.315667+08:00",
-  "date": "2026-01-10",
-  "time": "12:03:42",
+  "fetched_at": "2026-01-12T12:35:18.204921+08:00",
+  "date": "2026-01-12",
+  "time": "12:35:18",
   "id": "UCPrdw58ZZXJyKYXdcCGViWw",
   "title": "Jaytrixia - Videos",
   "channel_url": "https://www.youtube.com/@Jaymantrix",
