@@ -1,10 +1,9 @@
-> My Gacha Games Played Right Now! (Updated: Jan 10,2026)
+> My Gacha Games Played Right Now! (Updated: Jan 12,2026)
 Limbus Company
-BrownDust II
 Seven Knights Re:BIRTH
 Stella Sora
-Blue Archive
 Punishing Gray Raven
+Blue Archive
 Heaven Burns Red
 Zenless Zone Zero
 Honkai Star Rail
