@@ -103,3 +103,4 @@ Jan 12, 2026
 > Fade out bottom black gradient when depth is below 50px
 > Small changes on header and footer design and retweak some design
 > Adjust .content-wrapper min-height from 78vh to 80vh
+> Game list updated (Hyperdimension Neptunia Re;Birth1 img) and 1 unknown game got fixed
